# open-rothbard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rothbard/: config.py  dashboard.py  main.py
rothbard/core/: agent.py  audit.py  edges.py  nodes.py  scrub.py  state.py  tools.py
rothbard/finance/: solana_wallet.py  treasury.py  wallet.py  x402.py
rothbard/infra/: docker_manager.py  resource_budget.py
rothbard/markets/: scanner.py  scorer.py
rothbard/markets/sources/: arbitrage.py  base.py  content.py  defi.py  freelance.py  github_bounties.py  solana_defi.py
rothbard/memory/: episodic.py  semantic.py  working.py
rothbard/revenue/: arbitrage.py  base.py  content.py  freelance.py  github_submitter.py  registry.py  trading.py
rothbard/tools/: api_caller.py  code_exec.py  web.py
tests/: test_scanner.py  test_treasury.py  test_wallet.py
workers/: Dockerfile.scout  Dockerfile.worker  scout_entrypoint.py  worker_entrypoint.py
