[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-rothbard"
version = "0.1.0"
description = "Autonomous anarcho-capitalist economic agent framework"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "cdp-sdk>=0.14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "docker>=7.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "redis[hiredis]>=5.1",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "rich>=13",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["rothbard"]
